# investigatio

./: ChangeLog.md  Pariam-Investigo-BEncode.html  Pariam-Investigo-Compact.html  Pariam-Investigo-Metadata-Types.html  Pariam-Investigo-Types.html  README.md  doc-index.html  index.html  investigo.cabal  investigo.haddock  mini_Pariam-Investigo-BEncode.html  mini_Pariam-Investigo-Compact.html  mini_Pariam-Investigo-Metadata-Types.html  mini_Pariam-Investigo-Types.html
scripts/: deploy-haddock-manually.sh
src/: Main.hs  Types.hs
src/Pariam/Investigo/: BEncode.hs  Compact.hs  Types.hs
src/Pariam/Investigo/Metadata/: Types.hs
src/server/: Main.hs
