name:                investigo
version:             0.1
synopsis:            A torrent tracker.
homepage:            https://github.com/pariam/investigo
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2016 Ricky Elrod
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable investigo
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , bencode > 0.6 && < 0.7
                     , bytestring
                     , containers
                     , iproute
                     , network
                     , servant > 0.9 && < 1
                     , servant-server > 0.9 && < 1
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
