name:                investigo
version:             0.1
synopsis:            A torrent tracker.
homepage:            https://github.com/pariam/investigo
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Pariam.Investigo.BEncode
    , Pariam.Investigo.Compact
    , Pariam.Investigo.Metadata.Types
    , Pariam.Investigo.Types
  build-depends:       base >= 4 && < 5
                     , bencode > 0.6 && < 0.7
                     , bytestring
                     , containers
                     , free
                     , iproute
                     , network
                     , servant > 0.9 && < 1
                     , servant-server > 0.9 && < 1
                     , text
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable investigo
  main-is:             server/Main.hs
  build-depends:       base >= 4 && < 5
                     , bencode > 0.6 && < 0.7
                     , bytestring
                     , containers
                     , free
                     , iproute
                     , network
                     , servant > 0.9 && < 1
                     , servant-server > 0.9 && < 1
                     , text
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2